<resources>
    <string name="app_name">Apni Dukan</string>
    <string name="no_net">No data found, please on wifi/mobile data !</string>
    <string name="failure_msg">Something went wrong, Please try again!</string>
    <string name="no_data">No data found</string>
    <string name="valid">Valid</string>
    <string name="please_wait">Please wait</string>
    <string name="no_records">No Data Available</string>
    <string name="no_net_connection">No Network Connection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="my_account">My Account</string>
    <string name="my_docs">My Documents</string>
    <string name="help">Help</string>
    <string name="total_order">Total orders</string>
    <string name="security">Security</string>
    <string name="nav_nearby_services">Nearby Kiosk services</string>
    <string name="nav_history">आर्डर हिस्ट्री</string>
    <string name="nav_home">मेन पेज</string>
    <string name="nav_chat">दुकान से बातचीत</string>
    <string name="nav_nearby">दुकाने</string>
    <string name="nav_docs">मेरे डॉक्यूमेंट</string>
    <string name="nav_acc">अकाउंट</string>
    <string name="top_services">Top Services</string>
    <string name="services">Services</string>
    <string name="review_n_ratings">Review and ratings</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="top_stores">Top Stores</string>
    <string name="change_pwd">Change Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="top_exam_form">Top Exam Forms</string>
    <string name="unread">Unread</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="sign_up">साइन अप</string>
    <string name="otp_recieved">OTP received on mobile</string>
    <string name="verify_otp">वेरीफाई OTP</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="edit_phone">Edit Phone No.</string>
    <string name="already_acc"><u>Already have an account? Login!</u></string>
    <string name="dont_hav_acc"><u>Don\'t have an account? Sign up!</u></string>
    <string name="forgot_pin"><u>Forgot Pin? Reset Here</u></string>
    <string name="already_login"><u>Already have an account Login!</u></string>
    <string name="mobile_no">मोबाइल नंबर डाले</string>
    <string name="vendor_code">वेंडर कोड</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="email">ईमेल</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="full_name">पूरा नाम लिखे</string>
    <string name="read">Read</string>
    <string name="recent">Recent</string>
    <string name="order_history">Order History</string>
    <string name="camera_name">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="download_all">Download All</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="payment_method">पेमेंट का प्रकार चुने</string>

    <string name="nearby_stores">Nearby Stores</string>
    <string name="process_timer">Process Timer</string>
    <string name="process_timer_desc">कार्य पूरा होने का समय</string>
    <string name="call_kiosk">दुकानदार को कॉल करे</string>
    <string name="chat_kiosk">OTP एवं डॉक्यूमेंट भेजें</string>
    <string name="whatapp_kiosk">व्हाट्सएप्स से जुड़े</string>
    <string name="make_payment">पेमेंट करे</string>
    <string name="hide_options">Hide more options</string>
    <string name="share_screenshot">Share Screenshot</string>
    <string name="expand_options">Expand for more options</string>
    <string name="download_files">रिसीप्ट डाउनलोड करे</string>
    <string name="submit_rating">रेटिंग सबमिट करें</string>
    <string name="leave_rating">Leave a rating</string>
    <string name="post_submit_desc">Kindly wait till approval from our partner end. Once Application is marked as\nApproved kindly top to proceed </string>
    <string name="select_coupons">Select Coupons</string>
    <string name="download_desc">kindly download your files provided by the kiosk.</string>
    <string name="apply_coupon_code">कूपन अप्लाई करे</string>
    <string name="apply_coupon_code_desc">Kindly select or apply Coupon code here.</string>
    <string name="select_payment_method">Kindly select your payment method here.</string>
    <string name="payment_summary">Payment summary</string>
    <string name="review_fee">Kindly review your fee and charges.</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="discount">Discount</string>
    <string name="cart_value_discount">Cart Value Offer Discount</string>
    <string name="get_coupons_click"><u>कूपन देखे और अप्लाई करे</u></string>
    <string name="clk_to_proceed">आगे बढ़े</string>
    <string name="resend"><u>Resend</u></string>

    <!--    validations-->
    <string name="empty_name">Please enter valid name</string>
    <string name="empty_mobile">Please enter valid mobile no</string>
    <string name="empty_vendor_code">Please enter vendor code</string>
    <string name="empty_pin">Please enter valid pin</string>
    <string name="empty_device_token">Please wait until fetch valid device token</string>
    <string name="empty_device_type">Please wait until fetch valid device type</string>
    <string name="u_view_details_u"><u>View Details</u></string>
    <string name="rs">\u20B9</string>
    <string name="api_key">AIzaSyBqqRDGvGCxSP4cSi4kZseS6oeL-uU7SRg</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="download_invoice"><u>बिल डाउनलोड करे</u></string>
    <string name="enquiry">Enquiry</string>
    <string name="browse_by_category">Browse By Category</string>
    <string name="best_provider">Best Provider</string>
    <string name="latest_services">Latest Services</string>
    <string name="recommended_provider">Recommended Provider</string>
    <string name="search_for_online_service">Search for online service...</string>
    <string name="view_more"><u>View more orders</u></string>
    <string name="default_notification_channel_id">com.mponline.userApp.urgent</string>
    <string name="i_have_agree_terms_amp_conditions"><u>नियम शर्ते स्वीकार करे</u></string>
</resources>
