<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_history"
        android:enabled="true"
        android:icon="@drawable/ic_clock"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_docs"
        android:enabled="true"
        android:icon="@drawable/file_icon"
        android:title="@string/nav_docs" />
    <item
        android:id="@+id/nav_acc"
        android:enabled="true"
        android:icon="@drawable/ic_user_small"
        android:title="@string/nav_acc" />

</menu>