<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/layout_back" />

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/common_toolbar_normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_list_title"
                    style="@style/Text_mont_semibold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin15"
                    android:text="@string/update_profile"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/textsize16" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_username"
                    style="@style/Text_mont_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin25"
                    android:layout_marginRight="@dimen/margin15"
                    android:background="@color/grey_back"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:padding="@dimen/margin15"
                    android:text="" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_email"
                    style="@style/Text_mont_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin15"
                    android:layout_marginRight="@dimen/margin15"
                    android:background="@color/grey_back"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/margin15"
                    android:text="" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_mobile_no"
                    style="@style/Text_mont_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin15"
                    android:layout_marginRight="@dimen/margin15"
                    android:background="@color/grey_back"
                    android:editable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/mobile_no"
                    android:padding="@dimen/margin15"
                    android:text="" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/Text_mont_regular"
                    android:id="@+id/edit_vendor_code"
                    android:text=""
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/vendor_code"
                    android:background="@color/grey_back"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginRight="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin15"
                    android:padding="@dimen/margin15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_update_profile"
                    style="@style/Text_mont_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin25"
                    android:layout_marginRight="@dimen/margin15"
                    android:background="@drawable/gradient_blue"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin25"
                    android:paddingTop="@dimen/margin10"
                    android:paddingRight="@dimen/margin25"
                    android:paddingBottom="@dimen/margin10"
                    android:text="@string/update_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize16" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <include layout="@layout/layout_progress" />

    <include layout="@layout/layout_empty" />
</RelativeLayout>