<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin15"
                android:textSize="@dimen/textsize18"
                android:layout_marginTop="@dimen/margin25"
                android:text="@string/forgot_pwd"
                android:textColor="@color/black" />


            <LinearLayout
                android:layout_marginTop="@dimen/margin25"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginRight="@dimen/margin15"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/Text_mont_regular"
                    android:id="@+id/edit_mobile_no"
                    android:text=""
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/mobile_no"
                    android:background="@color/grey_back"
                    android:padding="@dimen/margin15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/ll_verify_otp_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Text_mont_regular"
                        android:id="@+id/text_subtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize12"
                        android:text="" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/Text_mont_regular"
                        android:id="@+id/edit_otp"
                        android:text=""
                        android:inputType="number"
                        android:maxLength="10"
                        android:hint="@string/enter_otp"
                        android:background="@color/grey_back"
                        android:layout_marginTop="@dimen/margin8"
                        android:padding="@dimen/margin15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Text_mont_medium"
                        android:id="@+id/text_resend"
                        android:text="Send again 2:00"
                        android:textColor="@color/black"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:paddingRight="@dimen/margin15"
                        android:paddingTop="@dimen/margin5"
                        android:paddingBottom="@dimen/margin15"
                        android:layout_marginTop="@dimen/margin15"
                        android:textSize="@dimen/textsize14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_submit_btn"
                style="@style/Text_mont_medium"
                android:text="@string/submit"
                android:paddingTop="@dimen/margin10"
                android:paddingBottom="@dimen/margin10"
                android:paddingRight="@dimen/margin25"
                android:paddingLeft="@dimen/margin25"
                android:layout_marginTop="@dimen/margin25"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginRight="@dimen/margin15"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/gradient_blue"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:id="@+id/text_login_txt"
                android:text="@string/already_login"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/margin15"
                android:layout_marginBottom="@dimen/margin25"
                android:textSize="@dimen/textsize16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>